chore: made tests headless again